2012-10-31  Benjamin Poulain  <bpoulain@apple.com>

        Add an optimized version of copyLCharsFromUCharSource for ARM
        https://bugs.webkit.org/show_bug.cgi?id=94886

        Reviewed by Gavin Barraclough.

        Michael Saboff added a SIMD version of copyLCharsFromUCharSource() in r125846.

        This patch a similar optimization for ARMv7 by using the interleaved load/store available
        in the NEON extension.

        The performance gains:
        -10000 characters: ~3.5 times faster.
        -20 characters (2 vectors): ~55% faster.
        -15 characters (1 vector): ~21% faster.
        -3 characters (no vector, pure overhead): ~10% slower.

        * wtf/text/ASCIIFastPath.h:
        (WTF::copyLCharsFromUCharSource):

2012-10-31  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL][WK2][AC] Use smart pointers for Evas_GL types
        https://bugs.webkit.org/show_bug.cgi?id=100745

        Reviewed by Kenneth Rohde Christiansen.

        Make OwnPtr usable with Evas_GL type to avoid handling
        raw pointers in EFL port.

        * wtf/OwnPtrCommon.h:
        (WTF):
        * wtf/efl/OwnPtrEfl.cpp:
        (WTF):
        (WTF::deleteOwnedPtr):

2012-10-29  Anders Carlsson  <andersca@apple.com>

        Build WebKit as C++11 on Mac
        https://bugs.webkit.org/show_bug.cgi?id=100720

        Reviewed by Daniel Bates.

        * Configurations/Base.xcconfig:
        Add CLANG_CXX_LANGUAGE_STANDARD=gnu++0x.

        * wtf/text/AtomicString.cpp:
        (WTF::AtomicString::add):
        Change the type of length to be unsigned to prevent implicit type conversions in non-constant initializer lists.

        * wtf/unicode/UTF8.cpp:
        (Unicode):
        Add static_casts to prevent implicit type conversions in non-constant initializer lists.

2012-10-29  Anders Carlsson  <andersca@apple.com>

        String::createCFString should return a RetainPtr
        https://bugs.webkit.org/show_bug.cgi?id=100419
